# publishers-aws-sqs

./: .gitlab-ci.yml  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/publishers/aws/: sqs.py
src/nagare/publishers/aws/: sqs.py
