[metadata]
name = nagare-publishers-aws-sqs
author = Net-ng
author_email = alain.poirier@net-ng.com
description = AWS SQS publisher
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/publishers-aws-sqs
    Tracker = https://github.com/nagareproject/publishers-aws-sqs/issues

[options]
zip_safe = False
packages = find:
install_requires =
    nagare-services-aws-sqs
    nagare-server

[options.entry_points]
nagare.publishers =
    aws.sqs = nagare.publishers.aws.sqs:Publisher

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
